# mobile_robotics_engineer

module_1_assignment/: CMakeLists.txt  README.md  package.xml
module_1_assignment/launch/: task1.launch.py  task2.launch.py  task3.launch.py
module_1_assignment/src/: task1.cpp
module_1_assignment/urdf/: task1.urdf  task2.urdf  task3.urdf
module_4_assignment/: README.md
module_4_assignment/robot_sensing/: CMakeLists.txt  package.xml
module_4_assignment/robot_sensing/launch/: lidar_maze_solving.launch.py
module_4_assignment/robot_sensing/robot_sensing/: CMakeLists.txt
module_4_assignment/robot_sensing/robot_sensing/launch/: camera_line_following.launch.py  lidar_box_maze_solving.launch.py  lidar_maze_solving.launch.py  spawn_turtlebot3.launch.py
module_4_assignment/robot_sensing/robot_sensing/models/Maze/: model.sdf
module_4_assignment/robot_sensing/robot_sensing/models/box_maze/: model.config  model.sdf
module_4_assignment/robot_sensing/robot_sensing/src/: box_maze_solving_with_lidar.cpp  line_following_with_camera.cpp  maze_solving_with_lidar.cpp
module_4_assignment/robot_sensing/robot_sensing/worlds/: box_maze.world  line_following.world
module_4_assignment/robot_sensing/worlds/: maze.world
